# RoboticsLab_DRM

./: .gitignore  .gitmodules  LICENSE  README.md
Control_lab/: clase1a.py
Control_lab/DRM-503/Clase 3/: DRM_CLASE_3.docx  clase3a.py
Control_lab/DRM-503/Clase 4/: clase4a.py
Control_lab/DRM-503/Clase 6/: Copia de DRM_CLASE_6(1).docx  Copia de DRM_CLASE_6.docx  Copia de Labo DRM_CLASE_6.docx  DRM_CLASE_6(1).docx  DRM_CLASE_6(10).docx  clase6a.py  (+6 more)
Control_lab/python_scripts/: 1_class.ipynb  clase3a.py  clase6b.py  clase8a.py  clase8a_v2.py
Introduction_lab/industrial_robots_ws/: mov.sh
Introduction_lab/industrial_robots_ws/src/industrial_mobile_robot/: CMakeLists.txt  package.xml
Introduction_lab/industrial_robots_ws/src/industrial_mobile_robot/config/: joint_names_industrial_mobile_robot.yaml  urdf.rviz
Introduction_lab/industrial_robots_ws/src/industrial_mobile_robot/launch/: display.launch.py  gazebo.launch.py
Introduction_lab/industrial_robots_ws/src/industrial_mobile_robot/meshes/: arm_base_link.STL  base_link.STL  link_b1.STL  link_b2.STL  link_b3.STL  link_b4.STL  link_b5.STL  link_b6.STL  link_cam1.STL  link_lidar3d1.STL  link_stereo1.STL
Introduction_lab/industrial_robots_ws/src/industrial_mobile_robot/urdf/: industrial_mobile_robot.csv  industrial_mobile_robot.urdf
Kinematics_Lab/anotations/: Recordings.docx
Kinematics_Lab/python_scripts/: derivate_and_integer.py  kine1.py  kinematics_example_1.py  kinematics_example_2.py  kinematics_example_3.py  kinematics_ws.ipynb  one.py
perception_and_planning_lab/python_scripts/: ball_tracker.py
(+227 files in other folders)
